<resources>
    <string name="app_name">Fitness Badge</string>
    <string name="Update_student">Update Student</string>
    <string name="aerobic">aerobic</string>
    <string name="hands">hands</string>
    <string name="abs">abs</string>
    <string name="cubes">cubes</string>
    <string name="student_name">name</string>
    <string name="jump">jump</string>
    <string name="student_class">class</string>
    <string name="name">Name</string>
    <string name="Class">Class</string>
    <string name="small_class">class</string>
    <string name="score">score</string>
    <string name="grade">grade</string>
    <string name="enter">ADD</string>
    <string name="total_score">Total Score</string>
    <string name="score_without_aerobic">no aerobic</string>
    <string name="total_score_small_letter">total score</string>
    <string name="search">Search Student</string>
    <string name="aero_values" translatable="false">7.00 \- 30.00</string>
    <string name="abs_values" translatable="false">120 \- 0</string>
    <string name="cubes_values" translatable="false">6.0 \- 30.0</string>
    <string name="hands_values" translatable="false">3.0 \- 0.0</string>
    <string name="jump_values" translatable="false">300 \- 50</string>
    <string name="update_button">UPDATE</string>
    <string name="student_name_to_update">student to update</string>
    <string name="did_you_enter_class" translatable="false">Have you entered student class?</string>
    <string name="enter_update_data">Add Student</string>
    <string name="view_student_results">Results</string>
    <string name="progress_text" translatable="false">Progress: </string>
    <string name="number_of_student" translatable="false">Total number of students:</string>
    <string name="number_of_student_in_db">Students Finished:</string>
    <string name="open_memory" translatable="false">Open File</string>
    <string name="back_memory" translatable="false">Back</string>
    <string name="import_excel_file">open file</string>
    <string name="search_hint" translatable="false">search a student..</string>
    <string name="setting">Setting</string>
    <string name="send_sms">Send Grade With SMS</string>
    <string name="sms">phone </string>
    <string name="phone_number">phone (optional)</string>
    <string name="hint_phone_number" translatable="false">050123456</string>
    <string name="export_to_excel">Mail Results</string>
    <string name="total_students" translatable="false">Total Students</string>
    <string name="home" translatable="false">Home</string>
    <string name="delete_data">Delete all students</string>
    <string name="no_phone" translatable="false">no phone</string>
    <string name="finished">Finished</string>
    <string name="havnt_finished">did not finish</string>
    <string name="show">show</string>
    <string name="all">all</string>
    <string name="done">done</string>
    <string name="undone">undone</string>
    <string name="profession" translatable="false">sport type</string>
    <string name="see_statistics" translatable="false">statistics</string>
    <string name="date">date</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="minutes">(minutes)</string>
    <string name="seconds">(seconds)</string>
    <string name="amount">(amount)</string>
    <string name="cm">(cm)</string>
    <string name="statistics">Statistics</string>
    <string name="watch_the_statistics">watch_the_statistics</string>
    <string name="grades_avg">Grades Average</string>
    <string name="finished_students">Finished Students</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_student_question">Delete student?</string>
    <string name="school_name">School name</string>
    <string name="choose_exercise">Choose exercise type</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="situp">Sit up</string>
    <string name="static_type">Static</string>
    <string name="student_saved">Student saved!</string>
    <string name="student_exists">Student already exists</string>
    <string name="send_to_student_question">Send to Student?</string>
    <string name="aerobic_result">Aerobic Result</string>
    <string name="aerobic_score">Aerobic Score</string>
    <string name="abs_result">Abs Result</string>
    <string name="abs_score">Abs Score</string>
    <string name="hands_result">Hands Result</string>
    <string name="hands_score">Hands Score</string>
    <string name="jump_result">Jump Result</string>
    <string name="jump_score">Jump Score</string>
    <string name="cubes_result">Cubes Result</string>
    <string name="cubes_score">Cubes Score</string>
    <string name="final_score">Final Score</string>
    <string name="delete_all_students_question">Are you sure you want to delete all students?</string>
    <string name="no_students_were_deleted">No Students were deleted!</string>
    <string name="students_deleted_successfully">Students were successfully deleted</string>
    <string name="ninth1">9th - 1</string>
    <string name="ninth2">9th - 2</string>
    <string name="ninth3">9th - 3</string>
    <string name="ninth4">9th - 4</string>
    <string name="ninth5">9th - 5</string>
    <string name="ninth6">9th - 6</string>
    <string name="ninth7">9th - 7</string>
    <string name="ninth8">9th - 8</string>
    <string name="ninth9">9th - 9</string>
    <string name="tenth1">10th - 1</string>
    <string name="tenth2">10th - 2</string>
    <string name="tenth3">10th - 3</string>
    <string name="tenth4">10th - 4</string>
    <string name="tenth5">10th - 5</string>
    <string name="tenth6">10th - 6</string>
    <string name="tenth7">10th - 7</string>
    <string name="tenth8">10th - 8</string>
    <string name="tenth9">10th - 9</string>
    <string name="eleventh1">11th - 1</string>
    <string name="eleventh2">11th - 2</string>
    <string name="eleventh3">11th - 3</string>
    <string name="eleventh4">11th - 4</string>
    <string name="eleventh5">11th - 5</string>
    <string name="eleventh6">11th - 6</string>
    <string name="eleventh7">11th - 7</string>
    <string name="eleventh8">11th - 8</string>
    <string name="eleventh9">11th - 9</string>
    <string name="twelfth1">12th - 1</string>
    <string name="twelfth2">12th - 2</string>
    <string name="twelfth3">12th - 3</string>
    <string name="twelfth4">12th - 4</string>
    <string name="twelfth5">12th - 5</string>
    <string name="twelfth6">12th - 6</string>
    <string name="twelfth7">12th - 7</string>
    <string name="twelfth8">12th - 8</string>
    <string name="twelfth9">12th - 9</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_class">Choose Class</string>
    <string name="hello">Hello</string>
    <string name="current_grades">These are your current grades</string>
    <string name="grade_c">grade:</string>
    <string name="aero_c">aerobic:</string>
    <string name="hands_c">hands:</string>
    <string name="jump_c">jump:</string>
    <string name="cubes_c">cubes:</string>
    <string name="abs_c">abs:</string>
    <string name="total_grade_c">Total grade:</string>
    <string name="end_adding_question">Add another student?</string>
    <string name="register">Register!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_account">NEW USER</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_up_screen">Sign up</string>
    <string name="login_screen">Login</string>
    <string name="input_error">Input Error here</string>
    <string name="forgot_password">forgot my password</string>
    <string name="check_your_email">Check Your Email</string>
    <string name="wrong_email">Wrong Email</string>
    <string name="fill_email_field">Fill Email Field Please</string>
    <string name="at_least_seven_chars">At Least 6 Chars</string>
    <string name="password_guide">password must contain at least 7 characters.</string>
    <string name="full_name">Full Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="gender_to_always_girls">Set gender to female</string>
    <string name="gender_to_always_boys">Set gender to male</string>
    <string name="add_student_setting">Add Student Settings</string>
    <string name="students_setting">Students Settings</string>
    <string name="exit_question">Are you sure you wish to exit?</string>
    <string name="student_details">Personal Details</string>
    <string name="student_scores">Scores</string>
    <string name="please_enter_student_name">Please enter student name</string>
    <string name="please_enter_student_class">Please enter student class</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="gender_error">Please enter student gender</string>
    <string name="user_setting">My user settings</string>
    <string name="delete_user">Delete my account</string>
    <string name="delete_account_question">Are you sure you want to delete this account?</string>
    <string name="farewell_user">Sad to see you leaving..</string>
    <string name="authentication_error">Authentication error</string>
    <string name="opening_email">Opening Email</string>
    <string name="export_completed">Exporting Completed</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_weak_password">Weak Password</string>
    <string name="error_user_exists">User Already Exists</string>
    <string name="student_list_view_instructions">Short click to edit. Long click to delete</string>
    <string name="choose_password">Choose Password</string>
    <string name="Calendar">Calendar</string>
    <string name="add_classes">Add classes</string>
    <string name="current_classes">current classes</string>
    <string name="delete_class_question">Delete class?</string>
    <string name="adding_classes">Adding Classes</string>
    <string name="students_grades">Students Grades</string>
    <string name="background_image">background image</string>
    <string name="aerobic_settings">Aerobic settings</string>
    <string name="aerobic_walking_switch">Set aerobic activity to walking for this student</string>
    <string name="push_up_switch">Set push up to half for this student</string>
    <string name="try_again">try again</string>
    <string name="invalid_phone_number">invalid phone number</string>
    <string name="invalid_name">invalid name</string>
    <string name="add_classes_in_settings">add classes in settings</string>
    <string name="plank">plank</string>
    <string name="push_up">push ups</string>



</resources>
