<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_export"
        android:enabled="true"
        android:icon="@drawable/ic_action_export"
        android:title="@string/export_to_excel"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/action_import"
        android:enabled="true"
        android:icon="@drawable/ic_action_import"
        android:title="@string/import_excel_file"
        app:showAsAction="ifRoom">

    </item>
    <item
        android:id="@+id/action_view"
        android:enabled="true"
        android:icon="@drawable/ic_action_view_students"
        android:title="@string/view_student_results"
        app:showAsAction="ifRoom">
    </item>

    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_action_add_student"
        android:title="@string/enter_update_data"
        app:showAsAction="ifRoom">

    </item>


</menu>