<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/student_object_id"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:textSize="16sp"
    android:textStyle="bold"

    >

    <TableRow
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/col_11"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="3dip"
            android:text="@string/student_name" />

        <TextView
            android:id="@+id/name_to_display"
            android:layout_width="85dp"
            android:layout_weight="0"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/col_13"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/student_class" />

        <TextView

            android:id="@+id/class_to_display"
            android:layout_width="35dp"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />


    </TableRow>

    <TableRow
        android:id="@+id/row_1.1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/sms_id"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/sms"
           />

        <TextView
            android:id="@+id/sms_to_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/col_15"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/score" />


        <TextView
            android:id="@+id/col_16"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/grade" />
    </TableRow>

    <TableRow
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >


        <TextView
            android:id="@+id/aero_row_2"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/aerobic"
           />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

        <TextView
            android:id="@+id/aero_score_to_diasplay"
            android:layout_width="20dp"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aero_res_to_diasplay"
            android:layout_width="39dp"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dip"
           />

    </TableRow>

    <TableRow
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/abs_row_3"
            style="@style/table_style"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/abs" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

        <TextView
            android:id="@+id/abs_score_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/abs_res_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:id="@+id/row_4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/jump_row_4"
            style="@style/table_style"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/jump" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

        <TextView
            android:id="@+id/jump_score_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/jump_res_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:layout_width="60dp"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:id="@+id/row_5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/hands_row_5"
            style="@style/table_style"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/hands" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

        <TextView
            android:id="@+id/hands_score_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/hands_res_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:id="@+id/row_6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/cubes_row_6"
            style="@style/table_style"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/cubes"/>

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

        <TextView
            android:id="@+id/cubes_score_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cubes_res_to_diasplay"
            android:gravity="end"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:padding="3dip" />

    </TableRow>

    <TableRow
        android:id="@+id/row_7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <TextView
            android:id="@+id/total_score_row_7"
            style="@style/table_style"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/total_score_small_letter" />

        <TextView
            android:id="@+id/total_score_row_7_to_display"
            android:layout_width="wrap_content"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_score_without_aerobic_row_7"
            style="@style/table_style"
            android:layout_width="wrap_content"
            android:gravity="end"
            android:padding="3dip"
            android:text="@string/score_without_aerobic" />

        <TextView
            android:id="@+id/total_score_without_aero_row_7_to_display"
            android:layout_width="wrap_content"
            android:padding="3dip"
            android:textColor="@color/table"
            android:textStyle="bold" />


    </TableRow>

</TableLayout>
